# notmuch-deliver

./: .gitignore  Makefile.am  README  configure.ac
src/: main.c
test/: Makefile.am  nm-test.sh  nm-testconfig  notmuch-lock.c  testmail
